add images for some plants

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<head>
+  <base href="/" />
+</head>
 <div class="herbalist-container">
   <header class="welcome-header">
     <h1>Welcome to Herbalist!</h1>
