--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 /* Herbalist Container */
 .herbalist-container {
   margin: 20px auto;
-  max-width: 600px;
+  width: 80%;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
