add login and sign up

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,23 +1,28 @@
-<nav class="tab-navigation">
-  <button
-    class="tab"
-    *ngFor="let tab of tabs"
-    [class.active]="activeTab === tab"
-    (click)="setActiveTab(tab)"
-  >
-    {{ tab }}
-  </button>
-</nav>
-<div class="tab-content" [ngSwitch]="activeTab">
-  <div *ngSwitchCase="TabType.GatherHerbs">
-    <app-gather-herbs></app-gather-herbs>
-  </div>
-  <div *ngSwitchCase="TabType.BotanicalCompendium">
-    <app-display-plants [plants]="plants()"></app-display-plants>
-  </div>
-  <div *ngSwitchCase="TabType.AlchemicalRecipes">
-    <app-display-recipes
-      [recipesWithPlants]="recipesWithPlants()"
-    ></app-display-recipes>
+<div class="herbalist-container">
+  <header class="welcome-header">
+    <h1>Welcome to Herbalist!</h1>
+  </header>
+  <nav class="tab-navigation">
+    <button
+      class="tab"
+      *ngFor="let tab of tabs"
+      [class.active]="activeTab === tab"
+      (click)="setActiveTab(tab)"
+    >
+      {{ tab }}
+    </button>
+  </nav>
+  <div class="tab-content" [ngSwitch]="activeTab">
+    <div *ngSwitchCase="TabType.GatherHerbs">
+      <app-gather-herbs></app-gather-herbs>
+    </div>
+    <div *ngSwitchCase="TabType.BotanicalCompendium">
+      <app-display-plants [plants]="plants()"></app-display-plants>
+    </div>
+    <div *ngSwitchCase="TabType.AlchemicalRecipes">
+      <app-display-recipes
+        [recipesWithPlants]="recipesWithPlants()"
+      ></app-display-recipes>
+    </div>
   </div>
 </div>
