add some styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "style/_styles.scss";
+@import "style/_buttons.scss";
+@import "style/_forms.scss";
+@import "style/_table.scss";
