--- a/src/app/display-plants/display-plants.component.scss
+++ b/src/app/display-plants/display-plants.component.scss
@@ -1,48 +1,4 @@
-$primary-color: #4caf50;
-$secondary-color: #f2f2f2;
-$hover-color: #e9f7ef;
-$text-color: #333;
-$border-color: #ddd;
-
-.plant-table {
-  width: 100%;
-  border-collapse: collapse;
-  table-layout: fixed; // Add this line
-
-  th,
-  td {
-    padding: 12px 15px;
-    text-align: left;
-    border-bottom: 1px solid $border-color;
-    font-size: 14px;
-  }
-
-  th {
-    background-color: $primary-color;
-    color: white;
-    text-transform: uppercase;
-  }
-
-  tbody {
-    tr:nth-child(even) {
-      background-color: $secondary-color;
-    }
-
-    tr:hover {
-      background-color: $hover-color;
-    }
-  }
-
-  td {
-    color: $text-color;
-    word-wrap: break-word; // Add this line to wrap text
-  }
-
-  img {
-    width: 50px;
-    height: auto;
-  }
-
+table {
   // Set column widths to prevent overflow
   th:nth-child(1),
   td:nth-child(1) {
