--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,12 +1,14 @@
+@import "../../../styles.scss";
+
 /* Herbalist Container */
 .herbalist-container {
   margin: 20px auto;
   width: 80%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  padding: $padding-medium;
+  border: 1px solid $light-gray;
+  border-radius: $large-border-radius;
+  box-shadow: $box-shadow;
+  background-color: $white;
   font-family: "Arial", sans-serif;
 }
 
@@ -14,50 +16,50 @@
 .welcome-header h1 {
   text-align: center;
   font-size: 28px;
-  color: #4caf50;
-  margin-bottom: 20px;
+  color: $primary-color;
+  margin-bottom: $padding-large;
 }
 
 /* Title */
 .herbalist-container h1 {
   text-align: center;
   font-size: 28px;
-  color: #4caf50;
-  margin-bottom: 20px;
+  color: $primary-color;
+  margin-bottom: $padding-large;
 }
 
 /* Tabs Navigation */
 .tab-navigation {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 20px;
+  margin-bottom: $padding-large;
 }
 
 .tab {
-  padding: 10px 20px;
-  border: 1px solid #4caf50;
-  border-radius: 5px;
-  background-color: #fff;
-  color: #4caf50;
+  padding: $padding-small $padding-medium;
+  border: 1px solid $primary-color;
+  border-radius: $border-radius;
+  background-color: $white;
+  color: $primary-color;
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease, color 0.3s ease;
+
+  &:hover {
+    background-color: $dark-hover;
+    color: $white;
+  }
 }
 
 .tab.active {
-  background-color: #4caf50;
-  color: #fff;
-}
-
-.tab:hover {
-  background-color: #45a049;
-  color: white;
+  background-color: $primary-color;
+  color: $white;
 }
 
 /* Tab Content */
 .tab-content {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 20px;
-  background-color: #ffffff;
+  border: 1px solid $light-gray;
+  border-radius: $border-radius;
+  padding: $padding-medium;
+  background-color: $white;
 }
