add item and recipe component

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,27 +2,18 @@
   <header class="welcome-header">
     <h1>Welcome to Herbalist!</h1>
   </header>
-  <nav class="tab-navigation">
-    <button
-      class="tab"
-      *ngFor="let tab of tabs"
-      [class.active]="activeTab === tab"
-      (click)="setActiveTab(tab)"
+  <nav class="navigation-links">
+    <a routerLink="/gather" [class.active]="activeTab() === 'gather'"
+      >Gather Herbs</a
     >
-      {{ tab }}
-    </button>
+    <a routerLink="/plants" [class.active]="activeTab() === 'plants'"
+      >Plant Compendium</a
+    >
+    <a routerLink="/recipes" [class.active]="activeTab() === 'recipes'"
+      >Concoction Catalog</a
+    >
   </nav>
-  <div class="tab-content" [ngSwitch]="activeTab">
-    <div *ngSwitchCase="TabType.GatherHerbs">
-      <app-gather-herbs></app-gather-herbs>
-    </div>
-    <div *ngSwitchCase="TabType.BotanicalCompendium">
-      <app-display-plants [plants]="plants()"></app-display-plants>
-    </div>
-    <div *ngSwitchCase="TabType.AlchemicalRecipes">
-      <app-display-recipes
-        [recipesWithPlants]="recipesWithPlants()"
-      ></app-display-recipes>
-    </div>
+  <div class="tab-content">
+    <router-outlet></router-outlet>
   </div>
 </div>
