--- a/src/app/pages/plant-page/plant-page.component.html
+++ b/src/app/pages/plant-page/plant-page.component.html
@@ -8,5 +8,7 @@
         <p><strong>Biome:</strong> {{ plant.biome }}</p>
       </div>
     </div>
+
+    <app-recipe *ngFor="let recipe of recipes()" [recipe]="recipe"></app-recipe>
   </div>
 </div>
