--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -63,4 +63,6 @@
   border-radius: $border-radius;
   padding: $padding-medium;
   background-color: $white;
+  max-width: 800px;
+  margin: 0 auto;
 }
