--- a/src/app/pages/plant-page/plant-page.component.scss
+++ b/src/app/pages/plant-page/plant-page.component.scss
@@ -10,11 +10,10 @@
 .title {
   text-align: center;
   font-size: 2rem;
-  margin-bottom: 20px;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   font-family: "MedievalSharp"; /* Fallback if one fails */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
   color: #4b3f3c; /* Dark brown ink color */
 }
 
@@ -23,7 +22,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "MedievalSharp"; /* Fallback if one fails */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
   color: #4b3f3c; /* Dark brown ink color */
 }
 
@@ -37,15 +36,18 @@
 }
 
 .plant-image {
+  padding-block: 1rem;
   width: 200px;
   height: auto;
 }
 
 .plant-info {
+  display: flex;
+  gap: 1rem;
   font-size: 1.2rem;
   line-height: 1.6;
 }
 .text-effect {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
   color: #4b3f3c; /* Dark brown ink color */
 }
