--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,5 @@
 @import "style/_styles.scss";
 @import "style/_buttons.scss";
 @import "style/_forms.scss";
+@import "style/_hover.scss";
 @import "style/_table.scss";
-@import "style/_tooltip.scss";
