--- a/src/app/display-recipes/display-recipes.component.html
+++ b/src/app/display-recipes/display-recipes.component.html
@@ -14,7 +14,7 @@
           [src]="recipe.imageUrl"
           alt="{{ recipe.name }}"
           loading="lazy"
-          onerror="this.src='/assets/plants/todo.webp';"
+          onerror="this.src=todoImageUrl"
         />
       </td>
       <td>{{ recipe.name }}</td>
