--- a/src/app/pages/plant-page/plant-page.component.html
+++ b/src/app/pages/plant-page/plant-page.component.html
@@ -9,7 +9,7 @@
       class="plant-image"
       [src]="plant.imageUrl"
       alt="{{ plant.name }}"
-      onerror="this.src='/assets/plants/todo.webp';"
+      onerror="this.src=todoImageUrl"
       loading="lazy"
     />
 
