--- a/src/app/display-recipes/item/item.component.scss
+++ b/src/app/display-recipes/item/item.component.scss
@@ -15,7 +15,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: $border-radius;
+  border-radius: 4px;
 }
 
 .count {
@@ -29,4 +29,3 @@ img {
   padding: 2px 4px;
   border-radius: $border-radius;
 }
-
