--- a/src/app/display-recipes/item/item.component.html
+++ b/src/app/display-recipes/item/item.component.html
@@ -11,7 +11,7 @@
   <img
     [src]="imageUrl()"
     class="item-image"
-    onerror="this.src=todoImageUrl"
+    onerror="this.src='/assets/plants/todo.webp';"
     loading="lazy"
     [ngStyle]="{
       'border-radius.px': imageBorderRadius()
