--- a/src/app/pages/plant-page/plant-page.component.html
+++ b/src/app/pages/plant-page/plant-page.component.html
@@ -1,18 +1,18 @@
 <div class="book-content" *ngIf="plant() as plant">
   <div class="title">{{ plant.name }}</div>
   <div class="content">
-    <div class="plant-info">
-      <div><strong>Rarity:</strong> {{ plant.rarity }}</div>
-      <div><strong>Biome:</strong> {{ plant.biome }}</div>
-    </div>
     <img
       class="plant-image"
       [src]="plant.imageUrl"
       alt="{{ plant.name }}"
-      onerror="this.src=todoImageUrl"
+      onerror="this.src='/assets/plants/todo.webp';"
       loading="lazy"
     />
 
+    <div class="plant-info">
+      <div><strong>Rarity:</strong> {{ plant.rarity }}</div>
+      <div><strong>Biome:</strong> {{ plant.biome }}</div>
+    </div>
     <app-recipe *ngFor="let recipe of recipes()" [recipe]="recipe"></app-recipe>
   </div>
 </div>
