--- a/src/app/pages/plant-page/plant-page.component.scss
+++ b/src/app/pages/plant-page/plant-page.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles.scss";
+
 :host {
   display: flex;
   justify-content: center;
@@ -9,12 +11,17 @@
 
 .title {
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   font-family: "MedievalSharp"; /* Fallback if one fails */
-  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
   color: #4b3f3c; /* Dark brown ink color */
+}
+
+.book-content {
+  position: relative;
+  top: 2%;
+  width: 45%;
+  height: 65%;
 }
 
 .content {
@@ -22,32 +29,16 @@
   flex-direction: column;
   align-items: center;
   font-family: "MedievalSharp"; /* Fallback if one fails */
-  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
   color: #4b3f3c; /* Dark brown ink color */
 }
 
-.plant-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  text-align: center;
-}
-
 .plant-image {
-  padding-block: 1rem;
-  width: 200px;
+  width: 150px;
   height: auto;
 }
 
 .plant-info {
   display: flex;
   gap: 1rem;
-  font-size: 1.2rem;
-  line-height: 1.6;
-}
-.text-effect {
-  // text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Stronger shadow */
-  color: #4b3f3c; /* Dark brown ink color */
+  padding: $padding-medium;
 }
