--- a/src/app/pages/recipe-page/recipe-page.component.scss
+++ b/src/app/pages/recipe-page/recipe-page.component.scss
@@ -66,10 +66,8 @@
   grid-row: 2;
 }
 
-.ingredients h3,
-.strength h3,
-.cost h3,
-.time h3 {
+h3 {
+  margin-top: 0;
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
 }
