add a search bar component to concoction catalog

--- a/src/app/concoction-catalog/concoction-catalog.component.html
+++ b/src/app/concoction-catalog/concoction-catalog.component.html
@@ -1,3 +1,4 @@
+<app-search-bar (search)="filterRecipes($event)"></app-search-bar>
 <app-display-recipes
-  [recipesWithPlants]="recipesWithPlants()"
+  [recipesWithPlants]="filteredRecipes()"
 ></app-display-recipes>
