--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,4 @@
 @import "style/_forms.scss";
 @import "style/_hover.scss";
 @import "style/_table.scss";
+@import "@ng-select/ng-select/themes/default.theme.css";
