add search bar to plant list and display counts in gather herb component

--- a/src/app/concoction-catalog/concoction-catalog.component.html
+++ b/src/app/concoction-catalog/concoction-catalog.component.html
@@ -1,5 +1,5 @@
 <div class="filter-pane">
-  <label>Filter by Strength:</label>
+  <label>Strength:</label>
   <ng-select
     [items]="potionStrengths"
     multiple="true"
