--- a/src/app/gather-herbs/gather-herbs.component.html
+++ b/src/app/gather-herbs/gather-herbs.component.html
@@ -36,5 +36,6 @@
   <app-display-plants
     *ngIf="gatheredPlants().length"
     [plants]="gatheredPlants()"
+    [counts]="counts()"
   ></app-display-plants>
 </div>
