--- a/src/app/gather-herbs/biome-selector/biome-selector.component.html
+++ b/src/app/gather-herbs/biome-selector/biome-selector.component.html
@@ -3,7 +3,7 @@
     *ngFor="let biome of biomes"
     [name]="biome"
     [imageUrl]="itemInputs()[biome].imageUrl"
-    [borderSize]="itemInputs()[biome].borderSize"
+    [borderWidth]="itemInputs()[biome].borderWidth"
     [borderColor]="itemInputs()[biome].borderColor"
     [borderRadius]="itemInputs()[biome].borderRadius"
     [imageBorderRadius]="itemInputs()[biome].imageBorderRadius"
