--- a/src/app/display-recipes/item/item.component.scss
+++ b/src/app/display-recipes/item/item.component.scss
@@ -5,11 +5,11 @@
   display: inline-block;
   width: 50px;
   height: 50px;
-  background-color: $white;
-  border: 2px solid $primary-color;
-  border-radius: $border-radius;
   box-shadow: $box-shadow;
+  border-style: solid;
+}
 
+.showPointerOnHover {
   &:hover {
     cursor: pointer;
   }
@@ -19,7 +19,6 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
 }
 
 .count {
