--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,5 @@
 @import "style/_forms.scss";
 @import "style/_hover.scss";
 @import "style/_table.scss";
+@import "style/_modals.scss";
 @import "@ng-select/ng-select/themes/default.theme.css";
