--- a/src/app/plant-compendium/plant-compendium.component.html
+++ b/src/app/plant-compendium/plant-compendium.component.html
@@ -1,4 +1,20 @@
 <div class="filter-pane">
+  <label>Biome:</label>
+  <ng-select
+    [items]="biomes"
+    multiple="true"
+    (change)="onBiomeChange($event)"
+    closeOnSelect="false"
+  ></ng-select>
+
+  <label>Rarity:</label>
+  <ng-select
+    [items]="plantRarities"
+    multiple="true"
+    (change)="onRarityChange($event)"
+    closeOnSelect="false"
+  ></ng-select>
+
   <app-search-bar (search)="setSearchTerm($event)"></app-search-bar>
 </div>
 <app-display-plants [plants]="filteredPlants()"></app-display-plants>
