--- a/src/app/display-recipes/display-recipes.component.html
+++ b/src/app/display-recipes/display-recipes.component.html
@@ -6,10 +6,11 @@
       <th>Ingredients</th>
       <th>Effect</th>
       <th>Strength</th>
+      <th>Craftable</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let recipe of recipesWithPlants()">
+    <tr *ngFor="let recipe of recipes()">
       <td>
         <img
           [routerLink]="['/recipes', recipe.id]"
@@ -34,6 +35,7 @@
       </td>
       <td>{{ recipe.effect }}</td>
       <td>{{ recipe.strength }}</td>
+      <td>{{ recipe.maxCraftable }}</td>
     </tr>
   </tbody>
 </table>
